--- a/DIUTF/app/src/main/AndroidManifest.xml
+++ b/DIUTF/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".StartActivity" />
+        <activity android:name=".ProfileActivity" />
     </application>
 
 </manifest>
