--- a/DIUTF/app/src/main/AndroidManifest.xml
+++ b/DIUTF/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".StartActivity" />
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".CameraActivity" />
     </application>
 
 </manifest>
